<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_background"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="30dp"
        android:background="@color/io_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="30sp"
            android:textColor="@color/white"
            tools:text="5+10-3" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="50sp"
            android:textColor="@color/green"
            tools:text="12" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/c" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_left"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/leftBracket" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_bracket_right"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/rightBracket" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/divide" />

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/seven" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/eight" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/nine" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_multiply"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/multiply" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/four" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/five" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/six" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/minus" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/one" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/two" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/three" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_addition"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/plus" />

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_0"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/zero" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dot"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/dot" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_equals"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                style="@style/Button_Style"
                android:background="@color/green"
                android:text="@string/equally" />

        </TableRow>
    </TableLayout>
    </LinearLayout>
</layout>